zerocopy-derive/tests/ui-nightly/absence_of_deprecated_warning.nightly.stderr
error[E0463]: can't find crate for `zerocopy_derive` which `zerocopy` depends on
  --> $DIR/absence_of_deprecated_warning.rs:16:1
   |
16 | extern crate zerocopy_renamed;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ can't find crate

error: cannot find attribute `zerocopy` in this scope
  --> $DIR/absence_of_deprecated_warning.rs:22:3
   |
22 | #[zerocopy(crate = "zerocopy_renamed")]
   |   ^^^^^^^^

error: use of deprecated struct `OldHeader`: Do not use
  --> $DIR/absence_of_deprecated_warning.rs:32:12
   |
32 | impl T for OldHeader {}
   |            ^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/absence_of_deprecated_warning.rs:14:9
   |
14 | #![deny(deprecated)]
   |         ^^^^^^^^^^

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0463`.
